Mejoras generales: -Mejorado el boton de back fisico para que regrese a la categoria anterior (puede configurarse para que vaya hasta el home directamente). Si se encuentra en home entonces sale de la aplicacion (puede configurarse un mensaje antes de salir para asegurarse que es lo que se quiere) -Se agrego un splash para la aplicacion (falta diseño, se esta usando uno generico) -Se elimino la propiedad de debug del manifest ya que el debug necesario no es de codigo nativo sino de codigo web, se desactivo para que no se olvide cambiar esto al momento de hacer el build final

--- a/prototipo/Fanaticos412/platforms/android/assets/www/index.html
+++ b/prototipo/Fanaticos412/platforms/android/assets/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -235,9 +235,9 @@
 					<div class="scroller">				
 						<ul>
 							<li category="All" title="Home" class="menu" bgcolor="#0404B4" data-position="0">Home</li>
-							<li category="football" title="Fútbol" class="menu"  bgcolor="#FF4000" data-position="1">Fútbol</li>
-							<li category="baseball_nacional" title="Beisbol Nacional" class="menu" bgcolor="#A4A4A4" data-position="2">Béisbol Nacional</li>
-							<li category="baseball" title="Beisbol Internacional" class="menu" bgcolor="#AEB404" data-position="3">Béisbol Internacional</li>							
+							<li category="football" title="FÃºtbol" class="menu"  bgcolor="#FF4000" data-position="1">FÃºtbol</li>
+							<li category="baseball_nacional" title="Beisbol Nacional" class="menu" bgcolor="#A4A4A4" data-position="2">BÃ©isbol Nacional</li>
+							<li category="baseball" title="Beisbol Internacional" class="menu" bgcolor="#AEB404" data-position="3">BÃ©isbol Internacional</li>							
 							<li category="basket" title="Baloncesto" class="menu" bgcolor="#FE2E64" data-position="4">Baloncesto</li>
 							<li category="tennis" title="Tenis" class="menu" bgcolor="#0B610B" data-position="5">Tenis</li>
 							<li category="f1" title="F1" class="menu" bgcolor="#CCCCCC" data-position="6">F1</li>				
@@ -245,7 +245,7 @@
 							<li category="athletics" title="Atletismo" class="menu" bgcolor="#BBBBBB" data-position="8">Atletismo</li>
 							<li category="golf" title="Golf" class="menu" bgcolor="#CCCCCC" position="9">Golf</li>
 							<li category="olympics" title="Olimpiadas" class="menu" bgcolor="#EEEEEE" data-position="10">Olimpiadas</li>				
-							<li category="Other" title="Más Deportes" class="menu" bgcolor="#0B3B2E" data-position="11">Más Deportes</li>
+							<li category="Other" title="MÃ¡s Deportes" class="menu" bgcolor="#0B3B2E" data-position="11">MÃ¡s Deportes</li>
 							<li category="score" data-title="Resultados" class="menu" bgcolor="#000000" data-position="12">LVBP Resultados</li>
 							<li category="score" data-title="Tabla de posiciones" class="menu" bgcolor="#000000" data-position="13">LVBP Tabla</li>
 						</ul>
@@ -479,7 +479,7 @@
 			</div>
 		</div>						
 
-		<div id="score" class="page" style="z-index: 2; left:-100%; background-color: #ffffff;  ">
+		<div id="score" class="page" style="z-index: 0; left:-100%; background-color: #ffffff;  ">
 			<div id="score-featured" class="featured" style="position:absolute;  z-index: 0; background-color: #0B3B2E;"></div>		
 			<div class="scroller">
 				<ul>
