--- a/prototipo/Fanaticos412/platforms/android/assets/www/index_metro.html
+++ b/prototipo/Fanaticos412/platforms/android/assets/www/index_metro.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" type="text/css" href="css/transaction.css">
@@ -17,6 +17,7 @@
 				-webkit-user-select:none;
 			    -webkit-text-size-adjust:none;
 				font-family:helvetica;
+				min-height :100%;
 			}
 			
 			body,ul,li {padding:0;
@@ -229,18 +230,19 @@
 
 		</style>
 	</head>
-	<body style="position: fixed; overflow: hidden;">
-
-		<div style="position: absolute; width:100%; height:auto; display: block; z-index: 2; top:0; left:0;" >
-			<div id="top" class="slider closed" style="position: relative; width:100%; height:auto; display: block; background-color:#ffffff; " >
+	<body style="position: fixed; height:100%; overflow: hidden; margin:0; padding:0; background-color:#000">
+		<!-- Div extra para evitar una linea de mas en la parte superior -->
+		<div style="position: relative; width:100%; height:1px; z-index: 3; top:0; left:0; background-color: #000;border-style:solid; border-color:#000000;border-width:1px;margin:0;padding:0" ></div>
+		<div style="position: absolute; width:100%; height:auto; display: block; z-index: 2; top:0; left:0; margin:0; padding:0" >
+			<div id="top" class="slider closed" style="position: relative; width:100%; height:auto; display: block; background-color:#ffffff; top:1px; " >
 				<div class="section" style="background-color: #0040FF;">Noticias</div>
 				<div id="menu" style="position:absolute; top:35px; left:0;">				
 					<div class="scroller">				
 						<ul>
 							<li category="All" title="Home" class="menu" bgcolor="#0404B4" data-position="0">Home</li>
-							<li category="football" title="Fútbol" class="menu"  bgcolor="#FF4000" data-position="1">Fútbol</li>
-							<li category="baseball_nacional" title="Beisbol Nacional" class="menu" bgcolor="#A4A4A4" data-position="2">Béisbol Nacional</li>
-							<li category="baseball" title="Beisbol Internacional" class="menu" bgcolor="#AEB404" data-position="3">Béisbol Internacional</li>							
+							<li category="football" title="FÃºtbol" class="menu"  bgcolor="#FF4000" data-position="1">FÃºtbol</li>
+							<li category="baseball_nacional" title="Beisbol Nacional" class="menu" bgcolor="#A4A4A4" data-position="2">BÃ©isbol Nacional</li>
+							<li category="baseball" title="Beisbol Internacional" class="menu" bgcolor="#AEB404" data-position="3">BÃ©isbol Internacional</li>							
 							<li category="basket" title="Baloncesto" class="menu" bgcolor="#FE2E64" data-position="4">Baloncesto</li>
 							<li category="tennis" title="Tenis" class="menu" bgcolor="#0B610B" data-position="5">Tenis</li>
 							<li category="f1" title="F1" class="menu" bgcolor="#CCCCCC" data-position="6">F1</li>				
@@ -248,7 +250,7 @@
 							<li category="athletics" title="Atletismo" class="menu" bgcolor="#BBBBBB" data-position="8">Atletismo</li>
 							<li category="golf" title="Golf" class="menu" bgcolor="#CCCCCC" position="9">Golf</li>
 							<li category="olympics" title="Olimpiadas" class="menu" bgcolor="#EEEEEE" data-position="10">Olimpiadas</li>				
-							<li category="Other" title="Más Deportes" class="menu" bgcolor="#0B3B2E" data-position="11">Más Deportes</li>
+							<li category="Other" title="MÃ¡s Deportes" class="menu" bgcolor="#0B3B2E" data-position="11">MÃ¡s Deportes</li>
 							<li category="score" data-title="Resultados" class="menu" bgcolor="#000000" data-position="12">LVBP Resultados</li>
 							<li category="score" data-title="Tabla de posiciones" class="menu" bgcolor="#000000" data-position="13">LVBP Tabla</li>
 						</ul>
@@ -278,7 +280,7 @@
 								</li>
 							</ul>
 						</div>
-					</div>																		
+					</div>					
 				</div>
 
 				<div class="pages" style="position:relative; float:left; display:block; background-color:#FF4000; ">					
@@ -482,8 +484,8 @@
 			</div>
 		</div>						
 
-		<div id="score" class="page" style="z-index: 2; left:-100%; background-color: #ffffff;  ">
-			<div id="score-featured" class="featured" style="position:absolute;  z-index: 0; background-color: #0B3B2E;"></div>		
+		<div id="score" class="page" style="z-index: 0; left:-100%; background-color: #ffffff;  ">
+			<div id="score-featured" class="featured hidden" style="position:absolute;  z-index: 0; background-color: #0B3B2E;"></div>		
 			<div class="scroller">
 				<ul>
 					<li>
@@ -510,7 +512,7 @@
 				</ul>
 			</div>
 		</div>
-	
+
 		
 		<div id="datacontent" class="page" style="z-index: 1; left:100%;">
 			<div class="scroller">
