Mejoras generales para hacer la aplicacion mas configurable ya que las paginas anteriormente estaban cableadas al .html en vez de generarse a traves del javascript

--- a/prototipo/Fanaticos412/platforms/android/assets/www/index_metro.html
+++ b/prototipo/Fanaticos412/platforms/android/assets/www/index_metro.html
@@ -238,8 +238,8 @@
 				<div class="section" style="background-color: #0040FF;">Noticias</div>
 				<div id="menu" style="position:absolute; top:35px; left:0;">				
 					<div class="scroller">				
-						<ul>
-							<li category="All" title="Home" class="menu" bgcolor="#0404B4" data-position="0">Home</li>
+						<ul id="mainMenuList">
+							<!--li category="All" title="Home" class="menu" bgcolor="#0404B4" data-position="0">Home</li>
 							<li category="football" title="Fútbol" class="menu"  bgcolor="#FF4000" data-position="1">Fútbol</li>
 							<li category="baseball_nacional" title="Beisbol Nacional" class="menu" bgcolor="#A4A4A4" data-position="2">Béisbol Nacional</li>
 							<li category="baseball" title="Beisbol Internacional" class="menu" bgcolor="#AEB404" data-position="3">Béisbol Internacional</li>							
@@ -252,7 +252,7 @@
 							<li category="olympics" title="Olimpiadas" class="menu" bgcolor="#EEEEEE" data-position="10">Olimpiadas</li>				
 							<li category="Other" title="Más Deportes" class="menu" bgcolor="#0B3B2E" data-position="11">Más Deportes</li>
 							<li category="score" data-title="Resultados" class="menu" bgcolor="#000000" data-position="12">LVBP Resultados</li>
-							<li category="score" data-title="Tabla de posiciones" class="menu" bgcolor="#000000" data-position="13">LVBP Tabla</li>
+							<li category="score" data-title="Tabla de posiciones" class="menu" bgcolor="#000000" data-position="13">LVBP Tabla</li-->
 						</ul>
 					</div>
 				</div>	
@@ -265,7 +265,7 @@
 		 
 		<div id="spage">
 			<div id="scrollerpage" style="display:block; float:left;">				
-				<div class="pages"  style="position:relative; float:left; display:block;">					
+				<!--div class="pages"  style="position:relative; float:left; display:block;">					
 					<div id="All" class="page" style="position:absolute; z-index:1; top:0px; bottom:0; left:0; width:100%; overflow:auto;">	
 						<div id="All-featured" class="featured" style="position:absolute;  z-index: 0; background-color: #0404B4;"></div>
 						<div class="scroller">
@@ -479,7 +479,7 @@
 							</ul>
 						</div>
 					</div>									
-				</div>					
+				</div-->					
 
 			</div>
 		</div>						
