--- a/prototipo/Fanaticos412/platforms/android/assets/www/index_metro.html
+++ b/prototipo/Fanaticos412/platforms/android/assets/www/index_metro.html
@@ -200,6 +200,7 @@
 		.slider {
 			overflow-y: hidden;
 			max-height: 500px; /* approximate max height */
+			/*max-height: 350px; /* approximate max height TVN*/
 		
 			transition-property: all;
 			transition-duration: .5s;
@@ -230,29 +231,16 @@
 
 		</style>
 	</head>
-	<body style="position: fixed; height:100%; overflow: hidden; margin:0; padding:0; background-color:#000">
+	<body style="position: fixed; height:100%; overflow: hidden; margin:0; padding:0; background-color:#FFF">
 		<!-- Div extra para evitar una linea de mas en la parte superior -->
-		<div style="position: relative; width:100%; height:1px; z-index: 3; top:0; left:0; background-color: #000;border-style:solid; border-color:#000000;border-width:1px;margin:0;padding:0" ></div>
+		<!--div style="position: relative; width:100%; height:1px; z-index: 3; top:0; left:0; background-color: #000;border-style:solid; border-color:#000000;border-width:1px;margin:0;padding:0" ></div-->
 		<div style="position: absolute; width:100%; height:auto; display: block; z-index: 2; top:0; left:0; margin:0; padding:0" >
 			<div id="top" class="slider closed" style="position: relative; width:100%; height:auto; display: block; background-color:#ffffff; top:1px; " >
 				<div class="section" style="background-color: #0040FF;">Noticias</div>
 				<div id="menu" style="position:absolute; top:35px; left:0;">				
 					<div class="scroller">				
 						<ul id="mainMenuList">
-							<!--li category="All" title="Home" class="menu" bgcolor="#0404B4" data-position="0">Home</li>
-							<li category="football" title="Fútbol" class="menu"  bgcolor="#FF4000" data-position="1">Fútbol</li>
-							<li category="baseball_nacional" title="Beisbol Nacional" class="menu" bgcolor="#A4A4A4" data-position="2">Béisbol Nacional</li>
-							<li category="baseball" title="Beisbol Internacional" class="menu" bgcolor="#AEB404" data-position="3">Béisbol Internacional</li>							
-							<li category="basket" title="Baloncesto" class="menu" bgcolor="#FE2E64" data-position="4">Baloncesto</li>
-							<li category="tennis" title="Tenis" class="menu" bgcolor="#0B610B" data-position="5">Tenis</li>
-							<li category="f1" title="F1" class="menu" bgcolor="#CCCCCC" data-position="6">F1</li>				
-							<li category="cycling" title="Ciclismo" class="menu" bgcolor="#AAAAAA" data-position="7">Ciclismo</li>				
-							<li category="athletics" title="Atletismo" class="menu" bgcolor="#BBBBBB" data-position="8">Atletismo</li>
-							<li category="golf" title="Golf" class="menu" bgcolor="#CCCCCC" position="9">Golf</li>
-							<li category="olympics" title="Olimpiadas" class="menu" bgcolor="#EEEEEE" data-position="10">Olimpiadas</li>				
-							<li category="Other" title="Más Deportes" class="menu" bgcolor="#0B3B2E" data-position="11">Más Deportes</li>
-							<li category="extra" data-title="Resultados" class="menu" bgcolor="#000000" data-position="12">LVBP Resultados</li>
-							<li category="extra" data-title="Tabla de posiciones" class="menu" bgcolor="#000000" data-position="13">LVBP Tabla</li-->
+							<!-- Filled in javascript -->
 						</ul>
 					</div>
 				</div>	
