--- a/prototipo/Fanaticos412/platforms/android/assets/www/index_metro.html
+++ b/prototipo/Fanaticos412/platforms/android/assets/www/index_metro.html
@@ -42,7 +42,7 @@
 			}			
 			
 			.section {
-				position:relative; z-index:2;
+				position:relative; z-index:5;
 				top:0; left:0;
 				width:100%;
 		        height:20px;
@@ -52,7 +52,9 @@
 		        background-color: red;
 		        color:#ffffff;
 				font-weight: bold;
-				padding:5px;
+				padding:0;
+				padding-bottom:5px;
+				padding-top:5px;
 				background: linear-gradient(to bottom, #790000 0%, #E10000 13%, #8B0000 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
 			}	
 			
@@ -141,9 +143,9 @@
 				display: none;
 				background: #00387d;
 				
-				border: 3px solid red;
+				border: 3px solid black;
 				border-top: none;
-				box-shadow: 0 2px 5px #777;
+				box-shadow: 0 2px 5px rgba(0,0,0,0.5);
 				color: #FFF;
 				cursor: pointer;
 				border-radius: 0 0 3px 3px;
@@ -205,10 +207,21 @@
 			transition-property: all;
 			transition-duration: .5s;
 			transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+			
+			border-style:solid;
+			border-bottom: medium solid #000000;
+			border-top-style:none;
+			border-left-style:none;
+			border-right-style:none;
+			
+			box-shadow: 0 2px 5px rgba(0,0,0,0.5);
 		}
 		
 		.slider.closed {
 			max-height: 0;
+			border-style:none;
+			box-shadow: 0 0 0 rgba(0,0,0,0);
+			border-width:0;
 		}		
 		
 		
@@ -234,8 +247,8 @@
 	<body style="position: fixed; height:100%; overflow: hidden; margin:0; padding:0; background-color:#FFF">
 		<!-- Div extra para evitar una linea de mas en la parte superior -->
 		<!--div style="position: relative; width:100%; height:1px; z-index: 3; top:0; left:0; background-color: #000;border-style:solid; border-color:#000000;border-width:1px;margin:0;padding:0" ></div-->
-		<div style="position: absolute; width:100%; height:auto; display: block; z-index: 2; top:0; left:0; margin:0; padding:0" >
-			<div id="top" class="slider closed" style="position: relative; width:100%; height:auto; display: block; background-color:#ffffff; top:1px; " >
+		<div style="position: absolute; width:100%; height:auto; display: block; z-index: 2; top:0; left:0; margin:0; padding:0;" >
+			<div id="top" class="slider closed" style="position: relative; width:100%; height:auto; display: block; background-color:#ffffff; top:0px; margin:0; padding:0;" >
 				<div class="section" style="background-color: #0040FF;">Noticias</div>
 				<div id="menu" style="position:absolute; top:35px; left:0;">				
 					<div class="scroller">				
