--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -281,7 +281,7 @@
 		<script type="text/javascript" src="jquery-2.0.2.min.js"></script>
 		<script type="text/javascript" src="js/iscroll.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/SocialSharing.js"></script>
+        <!--script type="text/javascript" src="js/SocialSharing.js"></script-->
         <script type="text/javascript" src="js/index_tvn.js"></script>
         <script type="text/javascript" src="js/utils.js"></script>
 		<!--script type="text/javascript" src="js/debug/console-via-logger.js"></script-->
