Se corrige bug en vista de resultados

--- a/prototipo/Fanaticos412/platforms/android/assets/www/default.html
+++ b/prototipo/Fanaticos412/platforms/android/assets/www/default.html
@@ -205,10 +205,9 @@
 			<div id="extra-featured" class="featured hidden" style="position:absolute;  z-index: 0; background-color: #0B3B2E;"></div>		
 			<div class="scroller">
 				<ul>
-					<li>
-					
-						<ul id="extra-news-featured" class="news-featured">							
-							<li id="extra-news-featured-title" class="news-featured-title"></li>
+					<li>					
+						<ul id="extra-news-featured"  class="featured">							
+							<li id="extra-news-featured-title"  class="featured"></li>
 						</ul>							
 						<ul id="extras">																			
 							<li id="extra-section"></li>
