--- a/Fanaticos412/Fanaticos412/platforms/ios/www/default.html
+++ b/Fanaticos412/Fanaticos412/platforms/ios/www/default.html
@@ -252,6 +252,7 @@
 		<script type="text/javascript" src="js/StorageManager/StorageManager.js"></script>
 		<script type="text/javascript" src="js/News/NewsManager.js"></script>
 		<script type="text/javascript" src="js/Push/PushManager.js"></script>
+		<script type="text/javascript" src="js/GAManager/GAManager.js"></script>
        
         <script type="text/javascript">              
             app.initialize();
