Cache de Imagenes

--- a/Fanaticos412/Fanaticos412/platforms/android/assets/www/default.html
+++ b/Fanaticos412/Fanaticos412/platforms/android/assets/www/default.html
@@ -105,8 +105,8 @@
 			#header li .share img {vertical-align:middle; width:50%; height:auto; }
 			
 			#screen-block {display: block;position: absolute;top: 0;left: 0;z-index: 4;width: 100%;height: 100%; background-color: rgba(0,0,0,0.7); }
-			#flag {position:absolute; display:inline; width:100%; height:auto;  margin-left:25px; }
-			#flag img {width:20%; height:auto;}			
+			#flag {position:absolute; display:inline; width:100%; height:auto;   }
+			#flag img {width:20%; height:auto; margin-left:30px;}			
 			.hidden {visibility:hidden;}	
 			
 			
@@ -185,6 +185,7 @@
 
 		<script type="text/javascript" src="jquery-2.0.2.min.js"></script>
 		<script type="text/javascript" src="js/iscroll.js"></script>
+
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/SocialSharing.js"></script>
         <script type="text/javascript" src="js/default.js"></script>
@@ -198,7 +199,8 @@
 		<script type="text/javascript" src="js/News/NewsManager.js"></script>
 		<script type="text/javascript" src="js/Push/PushManager.js"></script>
 		<script type="text/javascript" src="js/GAManager/GAManager.js"></script>
-       
+        <script type="application/javascript" src="imgcache.js"></script>
+        
         <script type="text/javascript">              
             app.initialize();
         </script>
