Se valida version android para animar o no elementos

--- a/Fanaticos412/Fanaticos412/platforms/android/assets/www/default.html
+++ b/Fanaticos412/Fanaticos412/platforms/android/assets/www/default.html
@@ -97,7 +97,7 @@
 			#header li:last-child {width:15%;}		
 			
 			#header li .back {text-transform:uppercase;}
-			#header li .back img {vertical-align:middle; display:inline; margin:0 5px; }
+			#header li .back img {vertical-align:middle; display:inline; margin:0 0 0 5px;}
 			#header li .back img:not(.content) {visible:hidden; width:0px; width:0px; margin-left:90px;}
 			#header li .back img[class="content"] {width:10px; width:10px;}					
 			#header li .back span {vertical-align:top;}
@@ -111,8 +111,10 @@
 			#flag img {width:20%; height:auto; margin-left:30px;}			
 			.hidden {visibility:hidden;}	
 			
+			/*.news-datacontent .none {display:none;}	
+			.news-datacontent .inline {display:inline;}*/
 			
-			
+				
 		</style>
 	</head>
 	<body>
