--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -101,14 +101,16 @@
 			.hidden {visibility:hidden;}
 			.news-datacontent {background-color:#ffffff;}
 			
-			#flag {position: absolute; padding: 3px; 
-				top: 0px; left: 10px; background: #ffffff;
+			#flag {position: relative; padding: 1px; 
+				top: 0px; left: 0px; background: #ffffff;
 				border: 3px solid black;
 				border-top: none;
 				box-shadow: 0 2px 5px rgba(0,0,0,0.5);
 				color: #FFF;
 				cursor: pointer;
 				border-radius: 0 0 3px 3px;
+				margin-left:30px;
+				width: 15%; height:15%;
 			}	
 			
 			
@@ -135,9 +137,9 @@
 			</div>
 			
 			
-			<div style="position: absolute; width:30%; height:30%; display: block; " >
-				<span id="flag"><img src="img/flag.png" style="width: 100%; height:auto;"></span>
-			</div>	
+			
+			<div id="flag"><img src="img/flag.png" style="width: 100%; height:auto;"></div>
+				
 			
 						
 		</div>
