--- a/NoticiasTVN/NoticiasTVN/platforms/ios/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/ios/www/index_tvn.html
@@ -70,6 +70,7 @@
 			li[data-category="latestvideos"]:before {content: "-"; margin-right:10px; color:#b7c238; background-color:#b7c238;}
 			li[data-category="latestnews_decision2014"]:before {content: "-"; margin-right:10px; color:#0a67be; background-color:#0a67be;}
 			li[data-category="latestvideos_decision2014"]:before {content: "-"; margin-right:10px; color:#ffc936; background-color:#ffc936;}
+			li[data-category="live_tv"]:before {content: "-"; margin-right:10px; color:#b7c238; background-color:#b7c238;}
 	
 			.menu {width: auto; height: 40px; line-height: 40px; font-size:1.4em; font-weight: bold; padding-left: 20px; text-align: left;  border-bottom: 1px solid #E2E2E2; display: block; min-height: 40px;}	
 			.iScrollHover {background:#444 !important; color:#eee !important;}
