--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -17,8 +17,8 @@
 		
 			body {position: fixed; width:100%; height:100%; overflow: hidden;}
 			#content {position:absolute; z-index:0; bottom:0; left:0; width:100%; height:auto;}					
-			#menu, #datacontent { position:absolute; z-index:1; top:0px; bottom:0; left:0; width:100%; overflow:auto;}				
-			#datacontent {top:40px;}
+			#menu, #datacontent, #datatrending { position:absolute; z-index:1; top:0px; bottom:0; left:0; width:100%; overflow:auto;}				
+			#datacontent, #datatrending {top:40px;}
 			
 			.scroller {position:absolute; z-index:1; -webkit-tap-highlight-color:rgba(0,0,0,0); width:100%; padding:0;}
 
@@ -34,6 +34,8 @@
 			.transp-block-video { background: #000 url(img/playvideo.png) no-repeat;  } 
 			img.transparent { opacity:.75; } 
 		
+		
+			li[data-view="trending"] {padding:5px;border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #9e9e9e; display:block; overflow:inherit;  }
 	 		li[data-view="thumbnail"] {padding:5px; border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #9e9e9e; display:block; overflow:inherit;  }
 			li[data-view="thumbnail"] .thumbnail {position:relative; display:block; float: left; width:40%; height:auto; }
 			li[data-view="thumbnail"] .headline {margin-left:41%; width:50%; font-weight:bold;}
@@ -151,8 +153,21 @@
 			<div id="scrollerpage" style="display:block; float:left;">				
 				<!-- Its filled in the javascript -->
 			</div>
-		</div>						
-		
+		</div>	
+							
+		<div id="datatrending" class="page" style="z-index: 1; left:100%;">
+			<div id="trending-featured" class="featured"  style="position:absolute;  z-index: 0; background-color:#000000;"></div>							
+			<div class="scroller">
+				<ul>
+					<li>					
+						<ul id="trending-news-featured" class="featured">
+							<li id="trending-news-featured-title" class="featured" ></li>
+						</ul>
+						<ul id="trending-news1" class="news1" style="background-color:#ffffff;"></ul>
+					</li>
+				</ul>
+			</div>
+		</div>
 		
 		<div id="datacontent" class="page" style="z-index: 1; left:100%;">							
 			<div class="scroller">
@@ -162,7 +177,10 @@
 					</li>
 				</ul>
 			</div>
-		</div>		
+		</div>
+
+		
+
 
 		<script type="text/javascript" src="jquery-2.0.2.min.js"></script>
 		<script type="text/javascript" src="js/iscroll.js"></script>
