--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -201,7 +201,7 @@
 		
 		<script type="text/javascript" src="js/Category/CategoryManager.js"></script>
 		<script type="text/javascript" src="js/Trending/TrendingIndexManager.js"></script>
-		<!--script type="text/javascript" src="js/Trending/TrendingManager.js"></script-->
+		<script type="text/javascript" src="js/Trending/TrendingManager.js"></script>
 		
         <script type="application/javascript" src="imgcache.js"></script>
         
