--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -68,7 +68,7 @@
 		
 			.hidden {visibility:hidden;}
 			.news-datacontent {background-color:#ffffff;}
-			
+			.datacontent {margin:0 10px; border-bottom-width: 1px; border-bottom-style: dotted; border-bottom-color: #9e9e9e;}
 			
 			
 			
