Se valida back de los tredings y el boton share

--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -91,9 +91,9 @@
 		
 		<header>
 			<ul>
-				<li class="icon logo" style=""><div>&nbsp;</div></li>
+				<li class="icon logo"><div>&nbsp;</div></li>
 				<li style="width:60%; height:auto;"><p id="header-title" style="text-transform:uppercase; background-color:white; font-weight: bold; font-size: 1.6em; ">HOME</p></li>
-				<li class="icon tv" style=""><div>&nbsp;</div></li>
+				<li class="icon tv"><div>&nbsp;</div></li>
 			</ul>
 		</header>
 		
