--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -38,6 +38,9 @@
 		
 			li[data-view="trending"] {padding:0px; padding-top:5px; padding-bottom:5px; border-bottom-width: 1px; border-bottom-style: dotted; border-bottom-color: #9e9e9e; display:block; overflow:inherit;  }
 			
+			li[data-view="banner"] {padding:0px;  border-bottom-width: 1px; border-bottom-style: dotted; border-bottom-color: #9e9e9e; display:block; overflow:inherit;  }
+			
+			
 	 		li[data-view="thumbnail"] {padding:0px; padding-top:5px; padding-bottom:5px; border-bottom-width: 1px; border-bottom-style: dotted; border-bottom-color: #666769; display:block; overflow:inherit;  }
 	 		
 			li[data-view="thumbnail"] .thumbnail {position:relative; display:block; float: left; width:40%; height:auto; }
@@ -74,14 +77,16 @@
 			
 			
 			
-			header {position: absolute; background-color: #FFFFFF; width: 100%; height:auto; z-index: 5; top:0; left:0; margin:0; padding:0;  border-bottom: 3pt solid #005fb0;}
+			header {position: absolute; background-color: #FFFFFF; width: 100%; height:auto; z-index: 5; top:0; left:0; margin:0; padding:0;  border-bottom: 3pt solid #005fb0; padding: 0; margin: 0; }
+			header ul {padding: 0; margin: 0;}
+			header ul li {padding: 0; margin: 0;}
 			header li {display: inline; float:left; line-height:100%; width:inherit; height:inherit;}
 
 			header li.icon.logo {width:20%; height:auto;}
 			header li.icon.tv {width:20%; height:auto; float:right;}
 			header li.icon.back {width:10%; height:auto; }
 
-			header li.icon.logo div {background:url(img/icon/logo.png) no-repeat center; background-size:75% auto; }
+			header li.icon.logo div {background:url(img/icon/logo.png) no-repeat center; background-size:100% auto; }
 			header li.icon.tv div {background:url(img/icon/tv.png) no-repeat center; background-size:80% auto;}
 			header li.icon.share div {background:url(img/icon/share.png) no-repeat center; background-size:100% auto;}				
 			header li.icon.back div {background:url(img/icon/back.png) no-repeat center; background-size:100% auto;}
@@ -151,6 +156,17 @@
 				left: 0;
 			}
 			
+			#header-title {
+			
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				height: 30%;
+				width: 50%;
+				margin: -15% 0 0 -50%;
+			
+			}
+			
 		</style>
 	</head>
 	<body>
@@ -158,7 +174,11 @@
 		<header>
 			<ul>
 				<li class="icon logo"><div>&nbsp;</div></li>
-				<li style="width:60%; height:auto;"><p id="header-title" style="text-transform:uppercase; background-color:white; font-weight: bold; font-size: 1.6em; ">HOME</p></li>
+				<li style="width:60%; height:auto;">
+					<div style="position: relative; width: 100%; height: 100%; ">
+						<div id="header-title" style="text-transform:uppercase; color:#000000; font-weight: bold; font-size: 1.6em; ">HOME</div>
+					</div>
+				</li>
 				<li class="icon tv"><div>&nbsp;</div></li>
 			</ul>
 		</header>
