--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -174,10 +174,12 @@
 		<header>
 			<ul>
 				<li class="icon logo"><div>&nbsp;</div></li>
-				<li style="width:60%; height:auto;">
+				<li style="position: absolute; width:60%; height:100%;">
 					<div style="position: relative; width: 100%; height: 100%; ">
-						<div id="header-title" style="text-transform:uppercase; color:#000000; font-weight: bold; font-size: 1.6em; ">HOME</div>
+						<!--div id="header-title" style="background:#Ff0; top:80%; width: 100%; text-transform:uppercase; color:#000000; font-weight: bold; font-size: 1.6em; ">HOME</div-->
+						<div id="header-title" style="top:115%; width: 100%; text-transform:uppercase; color:#000000; font-weight: bold; font-size: 1.6em; ">HOME</div>
 					</div>
+					
 				</li>
 				<li class="icon tv"><div>&nbsp;</div></li>
 			</ul>
