NoticiasTVN: Mejoras a los trending topics para que funcione bien la seleccion de noticias

--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -189,7 +189,7 @@
 		
 		
 		
-		<div id="splash" >
+		<div id="splash" class="hidden" >
 			<div id="splash-logo" >&nbsp;</div>
 			<div id="splash-caption" ><h1 style="text-align: center; color:#ffffff;">NOTICIAS TVN</h1></div>
 			<div id="splash-loading" ><img src="img/loading.gif" style="width: 25%; height: auto;"  /></div>
@@ -228,7 +228,7 @@
 				<ul>
 					<li>					
 						<ul id="trending-news-featured" class="featured">
-							<li id="trending-news-featured-title" class="featured" ></li>
+							<li id="trending-news-featured-title" class="featured" style="z-index:12;"></li>
 						</ul>
 						<ul id="trending-news1" class="news1" style="background-color:#ffffff;"></ul>
 					</li>
