NoticiasTVN: merge de los cambios de android a IOS

--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -242,7 +242,7 @@
 				<ul>
 					<li>					
 						<ul id="trending-news-featured" class="featured">
-							<li id="trending-news-featured-title" class="featured" style="z-index:12;"></li>
+							<li id="trending-news-featured-title" class="featured"></li>
 						</ul>
 						<ul id="trending-news1" class="news1" style="background-color:#ffffff;"></ul>
 					</li>
