--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -17,8 +17,9 @@
 		
 			body {position: fixed; width:100%; height:100%; overflow: hidden;}
 			#content {position:absolute; z-index:0; bottom:0; left:0; width:100%; height:auto;}					
-			#menu, #datacontent, #datatrending { position:absolute; z-index:1; top:0px; bottom:0; left:0; width:100%; overflow:auto;}
+			#menu, #datacontent, #datatrending, #datayoinformo { position:absolute; z-index:1; top:0px; bottom:0; left:0; width:100%; overflow:auto;}
 			#menu, #datacontent, #datatrending {top:100px;}
+			#datayoinformo {top:8%;}
 			
 			
 			.scroller {position:absolute; z-index:1; -webkit-tap-highlight-color:rgba(0,0,0,0); width:100%; padding:0;}
@@ -244,6 +245,7 @@
 						<ul id="trending-news-featured" class="featured">
 							<li id="trending-news-featured-title" class="featured"></li>
 						</ul>
+						<ul class="status" style="background-color:#ffffff; text-align:center;"></ul>
 						<ul id="trending-news1" class="news1" style="background-color:#ffffff;"></ul>
 					</li>
 				</ul>
@@ -259,6 +261,29 @@
 				</ul>
 			</div>
 		</div>
+		
+		<!-- DIV de la seccion Yo Informo-->
+		<!-- div id="datayoinformo" class="page" style="z-index: 1;">							
+			<div class="scroller">
+				<ul>
+					<li>
+						<div style="margin-left:auto; margin-right:auto; width:70%;">prueba</div>
+												
+					</li>
+					<li>
+						<select>
+						  <option value="volvo">Volvo</option>
+						  <option value="saab">Saab</option>
+						  <option value="mercedes">Mercedes</option>
+						  <option value="audi">Audi</option>
+						</select>
+					</li>
+					<li>
+						prueba	2					
+					</li>
+				</ul>
+			</div>
+		</div-->
 
 		
 
@@ -280,6 +305,8 @@
 		<script type="text/javascript" src="js/Category/CategoryManager.js"></script>
 		<script type="text/javascript" src="js/Trending/TrendingIndexManager.js"></script>
 		<script type="text/javascript" src="js/Trending/TrendingManager.js"></script>
+		
+		<script type="text/javascript" src="js/Geolocation/GeolocationManager.js"></script>
 		
         <script type="application/javascript" src="imgcache.js"></script>
         
