NoticiasTVN: actualizacion de cordova y mejoras para poder abrir una pagina web desde la aplicacion

--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -295,7 +295,7 @@
         <script type="text/javascript" src="js/SocialSharing.js"></script>
         <script type="text/javascript" src="js/index_tvn.js"></script>
         <script type="text/javascript" src="js/utils.js"></script>
-       	<script type="text/javascript" src="js/video.js"></script>
+       	<!--script type="text/javascript" src="js/video.js"></script-->
 		
 		<script type="text/javascript" src="js/StorageManager/StorageManager.js"></script>
 		<script type="text/javascript" src="js/News/NewsManager.js"></script>
