NoticiasTVN: Mejoras a la pantalla Acerca de...

--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -182,7 +182,7 @@
 		       	<div style="position: relative; width: 50%; height: 100%; display:inline-table;">
 		       		<div id="header-title" style="position:absolute; top:50%; left:0; height:50%; text-transform:uppercase; 
 		       		color:#000000; font-weight: bold; float:left; font-size: 1.6em; white-space:nowrap;
-		       		text-overflow:ellipsis;overflow:hidden; margin:0;padding:0;margin-top:-0.6em;">HOME</div>
+		       		text-overflow:ellipsis;overflow:hidden; margin:0;padding:0;margin-top:-0.6em;">NACIONALES</div>
 		       	</div>
 		       
 		       	<div class="icon tv" style="position: relative; display:inline-table; width:20%; height:100%; float: right;">&nbsp;</div>
@@ -292,7 +292,7 @@
 		<script type="text/javascript" src="js/iscroll.js"></script>
 
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/SocialSharing.js"></script>
+        <!--script type="text/javascript" src="js/SocialSharing.js"></script-->
         <script type="text/javascript" src="js/index_tvn.js"></script>
         <script type="text/javascript" src="js/utils.js"></script>
        	<!--script type="text/javascript" src="js/video.js"></script-->
