NoticiasTVN: cambios para subir app de emergencia android

--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -307,6 +307,7 @@
 		<script type="text/javascript" src="js/Trending/TrendingManager.js"></script>
 		
 		<script type="text/javascript" src="js/Geolocation/GeolocationManager.js"></script>
+		<script type="text/javascript" src="js/ImageManager/ImageManager.js"></script>
 		
         <script type="application/javascript" src="imgcache.js"></script>
         
