--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -117,6 +117,7 @@
 				padding: 0;
 				margin-top: -75px; 
 			   	margin-left: -75px; 
+			   	
 			}
 			
 			#splash {				
@@ -180,7 +181,7 @@
 			
 		
 			button {padding:10px;  background:#ccc;  border: 2px solid #AAAAAA; width: 50%;  display: block; margin: 0 auto; font-weight:bold }		
-			button:hover {background:#333333; color: #ffffff;}
+			/*button:hover {background:#333333; color: #ffffff;}*/
 		
 			
 		</style>
