--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -183,6 +183,10 @@
 			button {padding:10px;  background:#ccc;  border: 2px solid #AAAAAA; width: 50%;  display: block; margin: 0 auto; font-weight:bold }		
 			/*button:hover {background:#333333; color: #ffffff;}*/
 		
+			/*button#send-yo-informo { background:#5cb85c;}*/
+			button#get-photo { background:#d9534f;}
+			button#get-photo.ok { background:#398439;}
+			
 			
 		</style>
 	</head>
