--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -4,6 +4,7 @@
 		
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+		<!--meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0"-->
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" type="text/css" href="css/base.css">
@@ -15,7 +16,7 @@
 		<style type="text/css" media="all">
 
 		
-			body {position: fixed; width:100%; height:100%; overflow: hidden;}
+			body { width:100%; height:100%; overflow: hidden;}
 			#content {position:absolute; z-index:0; bottom:0; left:0; width:100%; height:auto;}					
 			#menu, #datacontent, #datatrending { position:absolute; z-index:1; top:0px; bottom:0; left:0; width:100%; overflow:auto;}
 			#menu, #datacontent, #datatrending {top:100px;}
