NoticiasTVN: intento por hacer que el select funcione para todos los OS

--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -281,7 +281,7 @@
 		</div>
 		
 		
-		<div id="miForm" class="page" style="display:block; z-index:10; top:100px; background-color: #ffffff;">				
+		<div id="miForm" class="page hidden" style="display:block; z-index:10; top:100px; background-color: #ffffff;">				
 			<form id="yoinformo">
 				<select id="numero">
 					<option id="1">Uno</option>
