Formulario de yo informo

--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -282,14 +282,8 @@
 		
 		
 		<div id="miForm" class="page hidden" style="display:block; z-index:10; top:100px; background-color: #ffffff;">				
-			<form id="yoinformo">
-				<select id="numero">
-					<option id="1">Uno</option>
-					<option id="2">Dos</option>
-				</select>
-				<br />
-				<input type="text"  />
-			</form>
+			<div id="yoinformo">								
+			</div>
 		</div>
 		
 		
