--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -5,7 +5,12 @@
 	
 	<head>	
 		<title>TVMax</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<!--meta http-equiv="Content-Type" content="text/html; charset=UTF-8" -->
+		
+		
+		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" >	
+	
+		
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">	
@@ -38,7 +43,7 @@
 
 		<main>&nbsp;</main>
 
-		<div id="wrapperM" class="page"  style="left: -100%;" >
+		<div id="wrapperM" class="page"  style="z-index: 10; left: -100%;" >
 			<div class="scroller">				
 				<div class="container">
 				</div>	
@@ -68,8 +73,8 @@
         </script>
 
 		<script type="text/javascript">		
-			var myScrollMenu = new IScroll('#wrapperM', {tap: true});
-			myScrollMenu.on('beforeScrollStart', function () { 
+			var myScrollM = new IScroll('#wrapperM', {tap: true});
+			myScrollM.on('beforeScrollStart', function () { 
 				this.refresh();		
 			});									
 		</script>
