Avance 1 de vista Home

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/index.html
@@ -74,7 +74,7 @@
 
 		<script type="text/javascript">		
 			var myScrollM = new IScroll('#wrapperM', {tap: true});
-			myScrollM.on('beforeScrollStart', function () { 
+			myScrollM.on('beforeScrollStart', function (event) { 
 				this.refresh();		
 			});									
 		</script>
